--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <h2 class="destacados__titulo">Destacados</h2>
                 <a href="#">
                     <figure class="destacados__panel">
-                        <img src="img/empezando-a-crear-logo.png" alt="Panel de la publicación sobre la creación del logotipo" class="destacados__panel-imagen">
+                        <img src="img/empezando-a-crear-logo.jpg" alt="Panel de la publicación sobre la creación del logotipo" class="destacados__panel-imagen">
                         <figC class="destacados__panel-texto">Conozca las primeras etapas de la creación de un logotipo</figC>
                     </figure>
                 </a>
