--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
 
             <!-- Seccion sobre nosotros -->
             <section class="sobre_nosotros container">
+
                 <div class="sobre_nosotros__contenido">
+                    <!-- Lista que contiene un item imagen y un item texto e iconos -->
                     <ul class="sobre_nosotros__lista">
                         <li>   
                             <a href="#">
@@ -197,7 +199,7 @@
             <!-- Seccion contacto -->
             <section class="contacto container">
                 <h2 class="contacto__titulo">Contacto</h2>
-                <p>Entre en contacto con nosotros</p>
+                <p class="contacto__texto">Entre en contacto con nosotros</p>
                 <a href="#" class="contacto__boton boton">Entre en contacto</a>
             </section>
 
